--- a/web/static/web/css/style.css
+++ b/web/static/web/css/style.css
@@ -1,10 +1,24 @@
 html, body {
     height: 100%;
+    min-width: 320px;
+    font-size: 14px; /* Same as Fomantic-UI */
 }
 
 body {
     display: block;
     flex-direction: column;
+}
+
+p, li {
+    font-size: 1.15rem;
+}
+
+p {
+    line-height: 1.85rem;
+}
+
+li {
+    line-height: 1.65rem;
 }
 
 .wrapper {
@@ -156,6 +170,14 @@ p, a, h1, h2, h3, h4, h5 {
     [class*="tablet hidden"],
     [class*="computer only"]:not(.tablet) {
         display: none !important;
+    }
+}
+
+
+/* Mobile / Tablet / iPad Portrait */
+@media only screen and (max-width: 991px) {
+    html, body {
+        font-size: 12px;
     }
 }
 
